Fix scrollbar bg color

--- a/app/assets/stylesheets/pizzeria/components/mixins.sass
+++ b/app/assets/stylesheets/pizzeria/components/mixins.sass
@@ -9,5 +9,3 @@
     border: 2px solid transparent
     &:hover
       background-color: rgba($color, 0.5)
-  &::-webkit-scrollbar-track
-    background-color: rgba($color, 0.05)
